--- a/pages/Programme/style.css
+++ b/pages/Programme/style.css
@@ -24,12 +24,11 @@ body {
 .AppLayout__sidebar {
     background: #f8fafc;
     border-right: 1px solid #e5e7eb;
-
     position: sticky;
     top: 80px;
-    height: 100vh;
     overflow: auto;
     height: calc(100vh - 80px);
+
 }
 
 /* Contenu */
