--- a/pages/home/home.css
+++ b/pages/home/home.css
@@ -20,3 +20,9 @@ body {
     width: 60%;
     align-items: center;
 }
+
+#header {
+    position: sticky;
+    top: 0;
+    z-index: 1000;
+}
